# peptigraph

./: .gitignore  analyze_attention.py  enhanced_analysis.py  evaluate.py  pyproject.toml  run_peptides.sh  train.py
configs/: transformer_config.yaml
dataset explore/: eda.py  eda_sum.txt  peptides_eda.py
models/: GINEtransformer.py  discriminative_model.py  gps_model.py  positional_encoding.py  transformer.py
utils/: data_loader.py  metrics.py  visualization.py
